--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">Latihan 5 - Session (Login/Logout)</string>
+    <string name="text_favorites">Favorites</string>
+    <string name="text_schedules">Schedule</string>
+    <string name="text_music">Music</string>
 </resources>
